Я не знаю что это такое и что я сделал. Не хватило сил \ времени